modify fiiter
