# router/patients_second.js
@@ -1187,10 +1187,16 @@ router.post('/oa/patients2/getAll',async(ctx,next) => {
 
 // 给郑莹倩师姐：从不同的表中获取数据
 router.post('/oa/patients2/getAll2',async(ctx,next) => {
-    let bah = ctx.request.body.bah;
+    let pid = ctx.request.body.pid;
     let dims = ctx.request.body.dims;
     let data = {};
+    let bah = [];
 
+    let sql = `SELECT part1_bah FROM SECOND_HOME WHERE part1_pid in (${pid.join(',')});`;
+    await db.query(sql).then(res => {
+        res.forEach(r => {bah.push(r['part1_bah']);});
+    })
+    bah = _.uniq(bah);
     for(let i in dims){
         let sql = '';
         if(i != 'SECOND_LIS'){
@@ -1221,6 +1227,154 @@ router.post('/oa/patients2/getAll2',async(ctx,next) => {
         })
     }
     ctx.body = {...Tips[0],data:data};
+})
+
+
+router.post('/oa/patients2/getAll3',async(ctx,next) => {
+    let pid = ctx.request.body.pid;
+    let dims = ctx.request.body.dims;
+    let bah = [];
+    let data = {};
+    
+    let sql = `SELECT part1_bah FROM SECOND_HOME WHERE part1_pid in (${pid.join(',')});`;
+    await db.query(sql).then(res => {
+        res.forEach(r => {bah.push(r['part1_bah']);});
+    })
+    for(let i in dims){
+        let sql = '';
+        if(i != 'SECOND_LIS'){
+            dims[i].unshift(table[i].key);
+            sql = `SELECT ${dims[i].join(',')} FROM ${i} WHERE ${table[i].key} in (${bah.join(',')});`;
+        }
+        else if(i === 'SECOND_LIS'){
+            let where = '';
+            dims[i].forEach(element => {
+                let name = element[Object.keys(element)[0]].map(e => {return `"${e}"`;});
+                where += `part3_TEST_ORDER_NAME="${Object.keys(element)[0]}" AND part3_CHINESE_NAME in (${name}) OR `;
+            })
+            where = `${table[i].key} in (${bah.join(',')}) AND (${where.slice(0,-4)})`;
+            sql = `SELECT * FROM ${i} WHERE ${where};`;
+        }
+
+        await db.query(sql).then(res => {
+            res = Utils.generateCategory(res,table[i].key);
+            res.forEach(element => {
+                element['data'].forEach(e => {delete e[table[i].key];});
+                if(element['type'] in data){
+                    data[element['type']] = Object.assign(data[element['type']],{[i]:element['data']});
+                }
+                else data[element['type']] = {[i]:element['data']};
+            });
+        }).catch(e => {
+            ctx.body = {...Tips[1],reason:e};
+        })
+    }
+    ctx.body = {...Tips[0],data:data};
+})
+
+// 给李安：获取骨密度、骨代谢等数据
+router.post('/oa/patients2/getBone',async(ctx,next) => {
+    let dims = ctx.request.body.dims;
+    let data = [];
+    let result = [];
+    let table = {
+        SECOND_BONEHOME:'part5_bah',
+        SECOND_BONEDENSITY:'part6_bah',
+        SECOND_VD:'part7_bah'
+    }
+    for(let i in dims){
+        dims[i].unshift(table[i]);
+        let sql = `SELECT ${dims[i].join(',')} FROM ${i};`;
+        await db.query(sql).then(res => {
+            res = res.map(r => {
+                let bah = r[table[i]];
+                delete r[table[i]];
+                r['bah'] = bah;
+                return r;
+            })
+           
+            //console.log(res);
+            if(!result.length) result = res;
+            else{
+                res.forEach(r1 => {
+                    result.forEach(r2 => {
+                        if(r1['bah'] === r2['bah'])
+                        r2 = Object.assign(r2,r1);
+                    })
+                })
+            }
+           
+
+        }).catch(e => {
+            ctx.body = {...Tips[1],reason:e};
+        })
+    }
+    ctx.body = {...Tips[0],data:result};
+})
+
+// 给李安：获取骨密度、骨代谢等数据
+router.post('/oa/patients2/getBone2',async(ctx,next) => {
+    let dims = ctx.request.body.dims;
+    let data = [];
+    let result = [];
+    let table = {
+        SECOND_BONEHOME:'part5_bah',
+        SECOND_BONEDENSITY:'part6_bah',
+        SECOND_VD:'part7_bah'
+    }
+    for(let i in dims){
+        dims[i].unshift(table[i]);
+        let sql = `SELECT ${dims[i].join(',')} FROM ${i};`;
+        await db.query(sql).then(res => {
+            for(let j = 0; j < res.length; j++)
+            {
+                for(let k in res[j]) res[j][k] = [res[j][k]];
+                if(j != 0 && res[j][table[i]][0] === res[j-1][table[i]][0])
+                {
+                    for(let k in res[j]) res[j-1][k] = res[j-1][k].concat(res[j][k]);
+                    res.splice(j--,1);
+                }
+            }
+
+            res = res.map(r => {
+                let bah = r[table[i]];
+                delete r[table[i]];
+                r['bah'] = bah;
+                return r;
+            })
+           
+            //console.log(res);
+            if(!result.length) result = res;
+            else{
+                res.forEach(r1 => {
+                    result.forEach(r2 => {
+                        if(r1['bah'][0] === r2['bah'][0])
+                        r2 = Object.assign(r2,r1);
+                    })
+                })
+            }
+           
+
+        }).catch(e => {
+            ctx.body = {...Tips[1],reason:e};
+        })
+    }
+    result.forEach(r => {
+        delete r['bah'];
+    })
+    console.log(result);
+    ctx.body = {...Tips[0],data:result};
+})
+
+// 给李安：获取病理数据
+router.post('/oa/patients2/getPathology',async(ctx,next) => {
+    let dims = ctx.request.body.dims;
+    let sql = `SELECT ${dims.join(',')} FROM SECOND_PATHOLOGY;`;
+    await db.query(sql).then(res => {
+        ctx.body = {...Tips[0],data:res};
+    }).catch(e => {
+        ctx.body = {...Tips[1],reason:e};
+    })
 })
 
 module.exports = router;
